jump to row and stop animation

--- a/public/css/bl.css
+++ b/public/css/bl.css
@@ -13,7 +13,7 @@
     content: ".";
     font-size: 50pt;
     font-weight: bold;
-    color: green;
+    color: #9ecee5;
     top: -7px;
     margin-left: -26px;
     display: -webkit-box;
